# websocket-backend

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
core/: asgi.py  authentication.py  settings.py  urls.py
core/api/: apps.py  urls.py
core/swagger/: apps.py
core/swagger/api/: urls.py
core/tests/: test_core.py
core/utils/: schemas.py
features/authentication/: _schemas.py  apps.py
features/authentication/api/: serializers.py  urls.py  views.py
features/authentication/tests/: test_serializers.py  test_views.py
features/rooms/: admin.py  apps.py  consumers.py  fields.py  models.py  routing.py
features/rooms/api/: serializers.py  urls.py  viewsets.py
features/rooms/migrations/: 0001_initial.py  0002_alter_message_options_alter_message_room.py  0003_alter_message_body.py  0004_alter_message_body.py  0005_remove_room_status_alter_room_name.py
features/rooms/templates/: chat.html
features/rooms/tests/: test_consumers.py  test_models.py  test_serializers.py  test_views.py
features/users/: admin.py  apps.py  manager.py  models.py
features/users/api/: serializers.py  urls.py  views.py  viewsets.py
features/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_groups_user_is_staff_user_is_superuser_and_more.py  0004_alter_user_password.py  0005_remove_user_users_user_email_6f2530_idx.py
features/users/tests/: test_model.py  test_models.py  test_serializer.py  test_serializers.py  test_views.py
