[project]
name = "take-home-websocket-backend"
authors = [{name = "Davi Galdino", email = "contato@daviga.dev.br"}]
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "Django==5.2.3",
    "Pillow==12.1.0",
    "psycopg==3.3.2",
    "sqlparse==0.5.3",
    "typing_extensions==4.12.2",
    "django-cors-headers==4.6.0",
    "django-environ==0.11.2",
    "redis==5.2.1",
    "drf-spectacular==0.28.0",
    "drf-spectacular-sidecar==2024.12.1",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.1",
    "daphne==4.1.2",
    "django-filter==24.3.0",
    "requests==2.32.3",
    "openpyxl==3.1.5",
    "channels==4.3.2",
    "channels-redis==4.3.0",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "pytest-cov==7.1.0",
    "pylint-django==2.7.0",
]

[tool.pylint.MAIN]
ignore-paths = [".*/migrations/.*"]
load-plugins = ["pylint_django"]

[tool.pylint.MASTER]
load-plugins = ["pylint_django"]
django-settings-module = "core.settings"
init-hook = """
import os
import sys
sys.path.append('.')
os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'core.settings')
"""

[tool.pylint.MESSAGE_CONTROL]
disable = """
    abstract-method,
    no-member,
    broad-exception-caught,
    missing-module-docstring,
    too-few-public-methods,
    attribute-defined-outside-init,
    unused-argument,
    too-many-ancestors
"""

enable = "useless-suppression"

[tool.pylint.REPORTS]
reports = "no"

[tool.pylint.FORMAT]
max-line-length = "120"

[tool.pylint.BASIC]
good-names = "_,i,e,setUp,tearDown,maxDiff"

[tool.pylint.DESIGN]
max-args = 6
max-positional-arguments = 6
max-locals = 15
max-returns = 10
max-branches = 12
max-statements = 50

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
  | locale
  | \.env\.test
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]
known_rest = [
    "rest_framework",
    "drf_spectacular",
    "drf_nested_routers",
    "djangorestframework",
]
known_django = ["django"]
known_third_party = [
    "redis",
    "requests",
    "faker",
    "PIL",
    "psycopg2",
    "httpx",
    "opentelemetry",
]
known_core = ["core"]
known_features = ["features"]
sections = [
    "FUTURE",
    "STDLIB",
    "REST",
    "DJANGO",
    "THIRDPARTY",
    "CORE",
    "FEATURES",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = [
    "test.py",
    "tests.py",
    "test_*.py",
    "tests_*.py",
    "*_test.py",
    "*_tests.py",
]
addopts = "-v --strict-markers --cov=. --cov-report=term-missing"

filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "fast: fast tests",
    "slow: slow tests",
    "integration: integration tests",
]

[tool.coverage.run]
omit = [
    "*migrations*",
    "*settings*",
    "manage.py",
    "wsgi.py",
    "asgi.py",
]